Pre-wrap property added for content blocks[Issue#5]

--- a/evarist/static/style.css
+++ b/evarist/static/style.css
@@ -1,3 +1,8 @@
+.content_block{
+  white-space: pre-wrap;
+}
+
+
 div.solution {
   white-space: pre-wrap;
   border:solid 1px;
